# open-deep-research

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_DOCS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  backend.sh  deploy.sh  frontend.sh  pyproject.toml  railway.json  requirements.txt
backend/: .env.example  Procfile  __init__.py  check_config.py  railway.json  requirements.txt
backend/app/: main.py
backend/app/agents/: langchain_research_agent.py  report_generator.py  research_agent.py  research_executor.py  research_planner.py  streaming_handler.py
backend/app/api/: auth.py  research.py
backend/app/chains/: __init__.py  analysis_chains.py  base_chains.py  planning_chains.py  report_chains.py  research_chains.py
backend/app/core/: __init__.py  deps.py  orchestrator.py  security.py
backend/app/db/: base.py
backend/app/llms/: __init__.py  deepseek_llm.py
backend/app/models/: __init__.py  research_task.py  user.py
backend/app/research/: agent.py  conductor.py  context_manager.py  cost_tracker.py  models.py  query_planner.py  retriever.py  scraper.py  source_curator.py  writer.py
backend/app/services/: __init__.py  compression_service.py  content_extraction_service.py  deepseek_service.py  evidence_store.py  research_repository.py  search_tools.py  verifier_service.py
backend/app/tools/: __init__.py  search_tools.py
backend/app/utils/: env.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css
frontend/src/components/: AuthPage.js  Button.js  CollapsibleSection.js  EmptyState.js  Header.js  HistoryItem.js  HistoryList.js  LoadingSpinner.js  ResearchResults.js  ResultHeader.js  SearchForm.js  Sidebar.js  StreamingResults.js
frontend/src/contexts/: AuthContext.js  HistoryContext.js
frontend/src/services/: api.js  errorHandler.js  jsonUtils.js  logger.js
scripts/: dev.sh  migrate-to-uv.sh
tasks/: todo.md
tests/: test_auth_api.py  test_pure_logic.py  test_research_api.py
