[project]
name = "research-gpt"
version = "1.0.0"
description = "Deep Research Agent - 基于 LangChain 和 DeepSeek 的智能研究助手"
authors = [
    {name = "Research Agent Team", email = "team@research-gpt.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.105.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.7.4",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.uv.workspace]
members = [
    "backend",
]


[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# 包含的规则集
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "RSE", # flake8-raise
    "ANN", # flake8-annotations
    "ICN", # flake8-import-conventions
    "PT",  # flake8-pytest-style
    "LOG", # flake8-logging
    "FA",  # flake8-future-annotations
]

# 忽略的规则
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "ANN002",  # missing type annotation for *args
    "ANN003",  # missing type annotation for **kwargs
    "ANN401",  # dynamically typed expressions (typing.Any) are disallowed
    "PT001",  # use @pytest.fixture without parentheses
    "PT023",  # use @pytest.fixture over @pytest.fixture()
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # allow unused imports in __init__.py
"tests/**/*" = [
    "ANN",  # no type annotations required in tests
    "S",    # no security concerns in tests
    "B",    # less strict bugbear rules in tests
]
"scripts/*" = [
    "ANN",  # no type annotations required in scripts
    "S",    # no security concerns in scripts
]

# flake8-annotations 配置
[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true

# isort 配置
[tool.ruff.lint.isort]
known-first-party = ["app"]
split-on-trailing-comma = true
force-single-line = true

# flake8-bugbear 配置
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

# flake8-import-conventions 配置
[tool.ruff.lint.flake8-import-conventions]
banned-from = ["typing"]

# McCabe 复杂度检查
[tool.ruff.lint.mccabe]
max-complexity = 10
