# 根目录配置 - 统一管理依赖和工作区

[project]
name = "research-gpt"
version = "1.0.0"
description = "Deep Research Agent - 基于 LangChain 和 DeepSeek 的智能研究助手"
authors = [
    {name = "Research Agent Team", email = "team@research-gpt.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.105.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.7.4",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "requests>=2.31.0",
    "tavily-python>=0.3.0",
    "duckduckgo-search>=3.9.0",
    "wikipedia>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# [tool.uv.workspace]
# members = [
#     "backend",
# ]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "RSE", # flake8-raise
    "ANN", # flake8-annotations
    "ICN", # flake8-import-conventions
    "PT",  # flake8-pytest-style
    "LOG", # flake8-logging
    "FA",  # flake8-future-annotations
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "ANN002",  # missing type annotation for *args
    "ANN003",  # missing type annotation for **kwargs
    "ANN401",  # dynamically typed expressions (typing.Any) are disallowed
    "PT001",  # use @pytest.fixture without parentheses
    "PT023",  # use @pytest.fixture over @pytest.fixture()
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # allow unused imports in __init__.py
"tests/**/*" = [
    "ANN",  # no type annotations required in tests
    "S",    # no security concerns in tests
    "B",    # less strict bugbear rules in tests
]
"scripts/*" = [
    "ANN",  # no type annotations required in scripts
    "S",    # no security concerns in scripts
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true

[tool.ruff.lint.isort]
known-first-party = ["app"]
split-on-trailing-comma = true
force-single-line = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["typing"]

[tool.ruff.lint.mccabe]
max-complexity = 10
